--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
 
 <!-- About Me section -->
 
-<section id="about-me" class= "start">
+<section id="about-me" class= " start projects">
     <div>
-        <h2 class="section-title border1">
-            About Me
-        </h2>
-    </div>
-    <div>
-        <p>
+        <div class="section-title">
+
+            <h2 >
+                About Me
+            </h2>
+        </div>
+        <br />
+        <p class="border1">
            My name is Daniel Jardine. I am happily married to a beautiful Brazilian princess. My wife and I really enjoy going on long walks and hikes. We have a dog that loves me a lot and a cat that doesn't like me too much, but loves my wife. I also really like playing videogames. Zelda and Final Fantasy are some of my favorite franchises, but I also enjoy competitve games as well like Rocket League and OverWatch. My favorite music is calm video game music that you could sleep to. My outdoor activities include hiking, swimming, running (when I feel like it), and biking (if I had a bike). I like meeting new people, and I also like to stream on Twitch. I am a Hardworker and always try to better myself in everything I do. Someday I think it would be really cool to learn how to play the guitar, as well as learn how to do pixel art. Ever since I was a kid I thought it would be cool to make a video game, now that I am older I am very interested in coding. My favorite thing about coding is when everything comes together and a program works the way you want it to. I find it very fulfilling.  
         </p>
     </div>
@@ -57,11 +59,11 @@
 
 <section id="work" class= "projects">
     <div class="flex-row">
-        <h2 class="section-title border2" >
+        <h2 class="section-title" >
             Work
         </h2>
     </div>
-    <div class="project-titles">
+    <div class="project-titles border1">
 
         <div class="chess">
             <h3>
@@ -72,14 +74,14 @@
 
         <div class="risk">
             <h3>
-                Risk
+               <a>Risk</a>
             </h3>
             <img src="assets/images/image03.jpg" alt="Risk the board game with pieces and cards" />
         </div>
 
         <div class="text-adventure">
             <h3>
-                Text Adventure
+                <a>Text Adventure</a>
             </h3>
             <img src="assets/images/image04.jpg" alt="A text adventure game!" />
         </div>
@@ -88,15 +90,15 @@
 </section> 
 
 <!-- Contact info -->
-<footer id="contact-me" class="contact">
+<footer id="contact-me" class="contact projects">
     <div>
-        <h2 class="section-title border1">
+        <h2 class="section-title">
             Contact Me
         </h2>  
     </div>
-    <div class="contact-info">
+    <div class="contact-info border1">
         <h3>Daniel Jardine</h3>
-        <p>If you have any questions or need to contact me I would be glad to talk at:</p>
+        <p>If you have any questions or need to contact me, You would be able to contact me at:</p>
 
         <address>
             <p>Phone: </p>
