Finished Portfolio with all standards met

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <Header>
     <h1>
-        <a href="/">Daniel Jardine</a>
+        <a>Daniel Jardine</a>
     </h1>
     <nav>
         <ul>
@@ -40,7 +40,7 @@
 
 <!-- About Me section -->
 
-<section id="about-me" class= " start projects">
+<section id="about-me" class= " about projects">
     <div>
         <div class="section-title">
 
@@ -58,8 +58,8 @@
 <!--Projects section-->
 
 <section id="work" class= "projects">
-    <div class="flex-row">
-        <h2 class="section-title" >
+    <div class="section-title">
+        <h2  >
             Work
         </h2>
     </div>
@@ -67,9 +67,9 @@
 
         <div class="chess">
             <h3>
-                <a> Chess </a>
+                <a href="https://chess.com"> Chess </a>
             </h3>
-            <img src="assets/images/image02.jpg" alt="A chess board with chess pieces scattered" />
+            <img src="assets/images/image02.jpg" href="https://chess.com" alt="A chess board with chess pieces scattered" />
         </div>
 
         <div class="risk">
@@ -91,21 +91,27 @@
 
 <!-- Contact info -->
 <footer id="contact-me" class="contact projects">
-    <div>
-        <h2 class="section-title">
+    <div  class="section-title">
+        <h2>
             Contact Me
         </h2>  
     </div>
     <div class="contact-info border1">
         <h3>Daniel Jardine</h3>
         <p>If you have any questions or need to contact me, You would be able to contact me at:</p>
+        <br />
 
-        <address>
-            <p>Phone: </p>
-            P: <a href="tel:385.439.2371">385.439.2371</a>
-            <p>Email: </p>
-            E: <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=danogaryjardine@gmail.com">danogaryjardine@gmail.com</a>
-        </address>
+       
+            <div>
+                <p>Phone: </p>
+                 <a href="tel:385.439.2371">385.439.2371</a>
+            </div>
+            <br />
+            <div>    
+                <p>Email: </p>
+                 <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=danogaryjardine@gmail.com">danogaryjardine@gmail.com</a>
+            </div>
+       
 
     </div>
 
